GIFs working, and with multiple GIFs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_sinnoh">SinnohActivity</string>
     <string name="title_activity_unova">UnovaActivity</string>
     <string name="title_activity_kalos">KalosActivity</string>
+    <string name="title_activity_charmander">CharmanderActivity</string>
+    <string name="title_activity_bulbasaur">BulbasaurActivity</string>
 </resources>
