GIFs and info done for Kanto starters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_kalos">KalosActivity</string>
     <string name="title_activity_charmander">CharmanderActivity</string>
     <string name="title_activity_bulbasaur">BulbasaurActivity</string>
+    <string name="title_activity_squirtle">SquirtleActivity</string>
 </resources>
