Hoenn + Sinnoh done / All resources sourced
Every gif and info sheet is bundled for pages now. Activities creates
for all Hoenn and Sinnoh pokemon and linked to region activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="title_activity_chikorita">ChikoritaActivity</string>
     <string name="title_activity_cyndaquil">CyndaquilActivity</string>
     <string name="title_activity_totodile">TotodileActivity</string>
+    <string name="title_activity_treecko">TreeckoActivity</string>
+    <string name="title_activity_torchic">TorchicActivity</string>
+    <string name="title_activity_mudkip">MudkipActivity</string>
+    <string name="title_activity_turtwig">TurtwigActivity</string>
+    <string name="title_activity_chimchar">ChimcharActivity</string>
+    <string name="title_activity_piplup">PiplupActivity</string>
 </resources>
